--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "galatic-age",
   "version": "1.0.0",
-  "description": "",
+  "description": "Journal testing project.",
   "main": "index.js",
   "scripts": {
-    "test": "karma start karma.conf.js",
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open",
+    "lint": "eslint src/*.js",
     "watch": "webpack --watch",
-    "lint": "eslint src/*.js"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git"
   },
   "keywords": [],
   "author": "",
-  "license": "",
-  "bugs": {
-    "url": ""
-  },
+  "license": "ISC",
   "homepage": "",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -30,7 +27,7 @@
     "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^3.0.6",
     "jasmine": "^3.1.0",
-    "jasmine-core": "^2.99.1",
+    "jasmine-core": "^2.99.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
