--- a/.eslintrc
+++ b/.eslintrc
@@ -6,15 +6,13 @@
     "extends": "eslint:recommended",
     "env": {
       "browser": true,
-      "jquery": true,
-      "jasmine": true,
-      "node": true
+      "jquery": true
     },
-    "rules": {
-        "semi": 1,
-        "indent": ["warn", 2],
-        "no-console": "warn",
-        "no-debugger": "warn",
-        "no-unused-vars": "warn"
-    }
+  "rules": {
+      "semi": 1,
+      "indent": ["warn", 2],
+      "no-console": "warn",
+      "no-debugger": "warn"
+  }
+
 }
