--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "galatic-age",
   "version": "1.0.0",
-  "description": "Journal testing project.",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "karma start karma.conf.js",
     "build": "webpack --mode development",
-    "start": "webpack-dev-server --open",
-    "lint": "eslint src/*.js",
-    "watch": "webpack --watch",
-    "test": "karma start karma.conf.js"
+    "start": "npm run build; webpack-dev-server --open --mode development",
+    "lint": "eslint src/*.js"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/Jahmanz/galatic-age.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "",
+  "bugs": {
+    "url": "https://github.com/Jahmanz/galatic-age/issues"
+  },
+  "homepage": "https://github.com/Jahmanz/galatic-age#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
