--- a/.eslintrc
+++ b/.eslintrc
@@ -6,13 +6,15 @@
     "extends": "eslint:recommended",
     "env": {
       "browser": true,
-      "jquery": true
+      "jquery": true,
+      "node": true,
+      "jasmine": true
     },
-  "rules": {
-      "semi": 1,
-      "indent": ["warn", 2],
-      "no-console": "warn",
-      "no-debugger": "warn"
-  }
-
+    "rules": {
+        "no-unused-vars": "warn",
+        "semi": 1,
+        "indent": ["warn", 2],
+        "no-console": "warn",
+        "no-debugger": "warn"
+    }
 }
